tooling/nargo_cli/tests/snapshots/execution_success/simple_shift_left_right/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: u32) {
    let z: u32 = x >> 4;
    let t: u32 = x << 4;
    assert(z == (t >> 8));
}
