tooling/nargo_cli/tests/snapshots/execution_success/simple_shift_left_right/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: u32):
    (no terminator instruction)
}
